// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface should add hooks to current suite 1`] = `
Object {
  "afterAll": Array [
    [Function],
  ],
  "afterEach": Array [
    [Function],
  ],
  "beforeAll": Array [
    [Function],
    [Function],
  ],
  "beforeEach": Array [
    [Function],
  ],
}
`;

exports[`Interface should add hooks to current suite 2`] = `
Object {
  "afterAll": Array [],
  "afterEach": Array [
    [Function],
  ],
  "beforeAll": Array [
    [Function],
  ],
  "beforeEach": Array [],
}
`;

exports[`Interface should add suites to root 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [],
      "description": "test 2",
      "failed": 0,
      "hooks": Object {
        "afterAll": Array [],
        "afterEach": Array [],
        "beforeAll": Array [],
        "beforeEach": Array [],
      },
      "options": Object {
        "skip": false,
        "todo": false,
      },
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(kCapture): false,
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "failed": 0,
  "hooks": Object {
    "afterAll": Array [],
    "afterEach": Array [],
    "beforeAll": Array [],
    "beforeEach": Array [],
  },
  "options": Object {
    "skip": false,
    "todo": false,
  },
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;

exports[`Interface should create skipped tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": true,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "failed": 0,
    "hooks": Object {
      "afterAll": Array [],
      "afterEach": Array [],
      "beforeAll": Array [],
      "beforeEach": Array [],
    },
    "options": Object {
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "failed": 0,
      "hooks": Object {
        "afterAll": Array [],
        "afterEach": Array [],
        "beforeAll": Array [],
        "beforeEach": Array [],
      },
      "options": Object {
        "skip": false,
        "todo": false,
      },
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(kCapture): false,
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(kCapture): false,
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [],
  "description": "test 1",
  "failed": 0,
  "hooks": Object {
    "afterAll": Array [],
    "afterEach": Array [],
    "beforeAll": Array [],
    "beforeEach": Array [],
  },
  "options": Object {
    "skip": false,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "root",
    "failed": 0,
    "hooks": Object {
      "afterAll": Array [],
      "afterEach": Array [],
      "beforeAll": Array [],
      "beforeEach": Array [],
    },
    "options": Object {
      "skip": false,
      "todo": false,
    },
    "parent": null,
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(kCapture): false,
    Symbol(isRunnable): true,
    Symbol(isRoot): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": false,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 4",
    "failed": 0,
    "hooks": Object {
      "afterAll": Array [],
      "afterEach": Array [],
      "beforeAll": Array [],
      "beforeEach": Array [],
    },
    "options": Object {
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "failed": 0,
      "hooks": Object {
        "afterAll": Array [],
        "afterEach": Array [],
        "beforeAll": Array [],
        "beforeEach": Array [],
      },
      "options": Object {
        "skip": false,
        "todo": false,
      },
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(kCapture): false,
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(kCapture): false,
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create todo tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": false,
    "todo": true,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "failed": 0,
    "hooks": Object {
      "afterAll": Array [],
      "afterEach": Array [],
      "beforeAll": Array [],
      "beforeEach": Array [],
    },
    "options": Object {
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "failed": 0,
      "hooks": Object {
        "afterAll": Array [],
        "afterEach": Array [],
        "beforeAll": Array [],
        "beforeEach": Array [],
      },
      "options": Object {
        "skip": false,
        "todo": false,
      },
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(kCapture): false,
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(kCapture): false,
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
}
`;

exports[`Interface should handle nested suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 1",
          "fn": [Function],
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "test",
          Symbol(kCapture): false,
          Symbol(isRunnable): true,
        },
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 2",
          "fn": [Function],
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "test",
          Symbol(kCapture): false,
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 1",
          "failed": 0,
          "hooks": Object {
            "afterAll": Array [],
            "afterEach": Array [],
            "beforeAll": Array [],
            "beforeEach": Array [],
          },
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "suite",
          Symbol(kCapture): false,
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(kCapture): false,
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(kCapture): false,
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 1",
              "failed": 0,
              "hooks": Object {
                "afterAll": Array [],
                "afterEach": Array [],
                "beforeAll": Array [],
                "beforeEach": Array [],
              },
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "suite",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(kCapture): false,
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(kCapture): false,
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 2",
              "failed": 0,
              "hooks": Object {
                "afterAll": Array [],
                "afterEach": Array [],
                "beforeAll": Array [],
                "beforeEach": Array [],
              },
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "suite",
              Symbol(kCapture): false,
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 2",
          "failed": 0,
          "hooks": Object {
            "afterAll": Array [],
            "afterEach": Array [],
            "beforeAll": Array [],
            "beforeEach": Array [],
          },
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "suite",
          Symbol(kCapture): false,
          Symbol(isRunnable): true,
        },
      ],
      "description": "module",
      "failed": 0,
      "hooks": Object {
        "afterAll": Array [],
        "afterEach": Array [],
        "beforeAll": Array [],
        "beforeEach": Array [],
      },
      "options": Object {
        "skip": false,
        "todo": false,
      },
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(kCapture): false,
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "failed": 0,
  "hooks": Object {
    "afterAll": Array [],
    "afterEach": Array [],
    "beforeAll": Array [],
    "beforeEach": Array [],
  },
  "options": Object {
    "skip": false,
    "todo": false,
  },
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(kCapture): false,
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;
